requirements have been met, outputting to dom

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <input type="text" name="userString" id="inputBox" placeholder="You are awesome!!">
     <input type="button" name="submit" id="submitBtn" value="Submit">
 
+    <div class="output">
+
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="./strings.js">
 
